--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -295,7 +295,7 @@
   }
 </style> -->
 
-<nav class="navbar navbar-expand-lg navbar-dark  bg-primary mb-4">
+<nav class="navbar navbar-expand-lg navbar-dark  bg-primary mb-4 p-3">
   <a class="navbar-brand" routerLink="/">FINAN$YS</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
     <span class="navbar-toggler-icon"></span>
