--- a/src/app/pages/categories/category-form/category-form.component.html
+++ b/src/app/pages/categories/category-form/category-form.component.html
@@ -7,21 +7,21 @@
             <a routerLink="/categories">Categorias</a>
         </li>
         <li class="breadcrumb-item active">
-            Formulário de categoria
+            {{ pageTitle }}
         </li>
     </ol>
 </nav>
 
 <div class="row mb-4">
     <div class="col-md">
-        <h1 class="h2 border-left pl-2"> Formulário de categoria </h1>
+        <h1 class="h2 border-left pl-2"> {{ pageTitle }} </h1>
     </div>
     <div class="col-md">
         <a routerLink="/categories" class="btn btn-light float-right"> << Voltar </a>
     </div>
 </div>
 
-<form [formGroup]="categoryForm">
+<form [formGroup]="categoryForm" (submit)="submitForm()">
 
     <div class="card">
         <div class="card-header">
@@ -29,18 +29,25 @@
         </div>
         <div class="card-body">
             <div class="form-row">
+
                 <div class="form-group col-md-4">
                     <label for="name"> Nome </label>
-                    <input type="text" class="form-control" id="name">
+                    <input type="text" class="form-control" id="name" formControlName="name">
                 </div>
+                <div class="text-danger" *ngIf="categoryForm.get('name')?.invalid && categoryForm.get('name')?.touched">
+                    <div class="" *ngIf="categoryForm.get('name')?.errors?.required"> dado obrigatório.</div>
+                    <div class="" *ngIf="categoryForm.get('name')?.errors?.minlength"> deve ter no mínimo 2 caracteres.</div>
+                </div>
+
                 <div class="form-group col-md-8">
                     <label for="description"> Descrição </label>
-                    <input type="text" class="form-control" id="description">
+                    <input type="text" class="form-control" id="description" formControlName="description">
                 </div>
+
             </div>
         </div>
         <div class="card-footer">
-            <button class="btn-primary btn btn-lg float-right" type="submit"> Salvar </button>
+            <button [disabled]="submittingForm || categoryForm.invalid" class="btn-primary btn btn-lg float-right" type="submit"> Salvar </button>
         </div>
     </div>
 
