--- a/src/app/pages/entries/entry-form/entry-form.component.html
+++ b/src/app/pages/entries/entry-form/entry-form.component.html
@@ -31,8 +31,21 @@
 
             <div class="form-row">
 
-                <div class="form-group col-md-4">
-                    <label for="name"> Nome </label>
+                <!-- Type -->
+                <div class="form-group col-md-2">
+                    <label for="type"> Tipo </label>
+                    <select name="type" id="type" formControlName="type" class="form-control">
+                        <option *ngFor="let option of typeOptions" [value]="option.value"> {{ option.text }} </option>
+                    </select>
+                    <div class="invalid-field text-danger" *ngIf="entryForm.get('type')?.invalid && entryForm.get('type')?.touched">
+                        <div class="" *ngIf="entryForm.get('type')?.errors?.required"> dado obrigatório.</div>
+                        <div class="" *ngIf="entryForm.get('type')?.errors?.minlength"> deve ter no mínimo 2 caracteres.</div>
+                    </div>
+                </div>
+
+                <!-- lançamento -->
+                <div class="form-group col-md-5">
+                    <label for="name"> Lançamento </label>
                     <input type="text" class="form-control" id="name" formControlName="name">
                     <div class="invalid-field text-danger" *ngIf="entryForm.get('name')?.invalid && entryForm.get('name')?.touched">
                         <div class="" *ngIf="entryForm.get('name')?.errors?.required"> dado obrigatório.</div>
@@ -40,8 +53,73 @@
                     </div>
                 </div>
 
+                <!-- amount -->
+                <div class="form-group col-md-3">
+                    <label for="amount"> Valor </label>
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text"> R$ </div>
+                        </div>
+                        <input [imask]="imaskConfig" type="text" class="form-control text-right" id="amount" formControlName="amount">
+                        
+                    </div>
+                    <div class="invalid-field text-danger" *ngIf="entryForm.get('amount')?.invalid && entryForm.get('amount')?.touched">
+                        <div class="" *ngIf="entryForm.get('amount')?.errors?.required"> dado obrigatório.</div>
+                        <div class="" *ngIf="entryForm.get('amount')?.errors?.minlength"> deve ter no mínimo 2 caracteres.</div>
+                    </div>
+                </div>
 
-                <div class="form-group col-md-8">
+                <!-- darw -->
+                <div class="form-group col-md-2">
+                    <label for="date"> Data </label>
+
+                    <p-calendar
+                        id="date"
+                        formControlName="date"
+                        inputStyleClass="form-control"
+                        dataType="string"
+                        dateFormat="dd/mm/yy"
+                        [showButtonBar]="true">
+
+                    </p-calendar>
+                    
+                    <div class="invalid-field text-danger" *ngIf="entryForm.get('date')?.invalid && entryForm.get('date')?.touched">
+                        <div class="" *ngIf="entryForm.get('date')?.errors?.required"> dado obrigatório.</div>
+                        <div class="" *ngIf="entryForm.get('date')?.errors?.minlength"> deve ter no mínimo 2 caracteres.</div>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="form-row">
+
+                <!-- paid -->
+                <div class="form-group col-md-2">
+                    <label for="paid"> Valor </label>
+                    <div class="btn-group">
+                        <label (click)="entryForm.get('paid')?.setValue(true)" [class.active]="entryForm.get('paid')?.value == true" class="btn btn-outline-info">Pago</label>
+                        <label (click)="entryForm.get('paid')?.setValue(false)" [class.active]="entryForm.get('paid')?.value == false" class="btn btn-outline-info">Pendente</label>
+                    </div>
+
+
+                    <div class="invalid-field text-danger" *ngIf="entryForm.get('paid')?.invalid && entryForm.get('paid')?.touched">
+                        <div class="" *ngIf="entryForm.get('paid')?.errors?.required"> dado obrigatório.</div>
+                    </div>
+                </div>
+
+                <!-- categoryId -->
+                <div class="form-group col-md-3">
+                    <label for="categoryId"> Categoria </label>
+                    <select name="categoryId" id="categoryId" formControlName="categoryId" class="form-control">
+                        <option *ngFor="let category of categories" [value]="category.id"> {{ category.name }} </option>
+                    </select>
+                    <div class="invalid-field text-danger" *ngIf="entryForm.get('categoryId')?.invalid && entryForm.get('categoryId')?.touched">
+                        <div class="" *ngIf="entryForm.get('categoryId')?.errors?.required"> dado obrigatório.</div>
+                    </div>
+                </div>
+
+                <!-- description -->
+                <div class="form-group col-md-7">
                     <label for="description"> Descrição </label>
                     <input type="text" class="form-control" id="description" formControlName="description">
                 </div>
@@ -63,3 +141,5 @@
     </div>
 
 </form>
+
+<pre>{{ entryForm.value | json }}</pre>
